--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 	<meta name="author" content="Robson Neres">
 	<meta name="description" content="Sond by https://mixkit.co/">
 	<link rel="manifest" href="appmanifest.json">
-	<link rel="apple-touch-icon" sizes="128x128" href="icons/icon-128.png">
-	<link rel="apple-touch-icon" sizes="256x256" href="icons/icon-256.png">
-	<link rel="apple-touch-icon" sizes="512x512" href="icons/icon-512.png">
-	<link rel="icon" type="image/png" href="icons/icon-512.png">
+	<link rel="apple-touch-icon" sizes="192x192" href="icons/android-chrome-192x192.png">
+	<link rel="apple-touch-icon" sizes="512x512" href="icons/android-chrome-512x512.png">
+	<link rel="icon" type="image/png" href="icons/android-chrome-512x512.png">
 
 <link rel="stylesheet" href="style.css">
 
